[package]
name = "reref"
version = "0.2.0"
edition = "2021"
authors = ["Parity Technologies <admin@parity.io>"]
license-file = "LICENSE"
description = "A tool for transforming the dependencies fields on all Cargo.toml in a given project"

[dependencies]
walkdir = "2.3"
anyhow = "1.0"
toml_edit = "0.19"
clap = { version = "4", features = ["derive", "env", "unicode", "cargo"] }
cargo-lock = "9"
